deployments/examples/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agones-allocator
  namespace: starx
spec:
  selector:
    app: agones-allocator
  ports:
    - name: http
      port: 8080
      targetPort: 8080
