deployments/examples/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allocator-egress
  namespace: starx
spec:
  podSelector:
    matchLabels:
      app: agones-allocator
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress:
    - to:
      ports:
        - protocol: TCP
          port: 443
